# imessage-crm

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: openai_config.py
docs/: database_design.md  implementation_plan.md
src/: main.py
src/ai/: __init__.py  conversation_analyzer.py  conversation_memory.py  conversation_simulator.py  enhanced_analyzer.py  insight_generator.py  message_drafter.py  thread_detector.py  voice_analyzer.py
src/contacts/: contact.py  contact_enrichment.py  contact_manager.py
src/database/: __init__.py  chat_state.py  contacts_db.py  db_connector.py
src/database/migrations/: generate_test_contacts.py  migrate_contacts.py  migrate_from_messages.py
src/database/schema/: contacts.sql
src/messaging/: __init__.py  group_chat_manager.py  message_reader.py  message_sender.py  search_history.py
src/web/: api.py  main.py
src/web/static/: index.html  script.js
tests/: test_db_connector.py  test_message_sender.py
tests/integration/: debug_group_chats.py  list_group_chats.py  test_contact_enrichment_integration.py  test_group_chat_integration.py  test_message_contact_integration.py  test_message_filtering.py  test_message_integration.py  test_message_search.py  test_message_search_scenarios.py  test_real_message.py  test_search_history.py
tests/unit/: test_contact.py  test_contact_enrichment.py  test_contact_manager.py  test_group_chat_manager.py
